Fix openapi validation errors
