# pkg/web/docs/swagger.json
@@ -155,6 +155,58 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "Creates an aggregator with specified configuration.",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Creates an aggregator.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Aggregator name",
+                        "name": "name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Aggregator URL",
+                        "name": "url",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.ID"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "not found",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    }
+                }
             }
         },
         "/aggregators/{id}": {
@@ -202,6 +254,9 @@
             },
             "put": {
                 "description": "Updates the aggregator configuration.",
+                "consumes": [
+                    "multipart/form-data"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -248,58 +303,6 @@
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/models.Error"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/models.Error"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "Creates an aggregator with specified configuration.",
-                "consumes": [
-                    "multipart/form-data"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Creates an aggregator.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Aggregator name",
-                        "name": "name",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Aggregator URL",
-                        "name": "url",
-                        "in": "formData",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/models.ID"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/models.Error"
-                        }
-                    },
-                    "404": {
-                        "description": "not found",
                         "schema": {
                             "$ref": "#/definitions/models.Error"
                         }
@@ -420,6 +423,9 @@
             },
             "put": {
                 "description": "Updates the comment with the specified ID.",
+                "consumes": [
+                    "multipart/form-data"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -471,7 +477,7 @@
                 }
             }
         },
-        "/comments/{document}": {
+        "/comments/{id}": {
             "post": {
                 "description": "Creates a comment for the specified document.",
                 "consumes": [
@@ -857,38 +863,23 @@
         },
         "/queries": {
             "get": {
-                "description": "Deletes the query with the specified ID.",
+                "description": "Returns all configured stored queries.",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Deletes the stored query.",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Query ID",
-                        "name": "query",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
+                "summary": "Returns stored queries.",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Success"
+                                "$ref": "#/definitions/models.StoredQuery"
                             }
                         }
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/models.Error"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/models.Error"
                         }
@@ -1042,7 +1033,7 @@
                 }
             }
         },
-        "/queries/ignore/{query}": {
+        "/queries/ignore": {
             "get": {
                 "description": "Returns exclusions of all queries.",
                 "produces": [
@@ -1069,7 +1060,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/queries/ignore/{query}": {
             "post": {
                 "description": "Ignores the query with the specified ID.",
                 "produces": [
@@ -1203,7 +1196,7 @@
                     {
                         "type": "integer",
                         "description": "Query ID",
-                        "name": "query",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -1237,6 +1230,9 @@
             },
             "put": {
                 "description": "Updates a stored query with the specified configuration.",
+                "consumes": [
+                    "multipart/form-data"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -1357,6 +1353,51 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.Success"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Deletes the query with the specified ID.",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Deletes the stored query.",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Query ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Success"
+                            }
                         }
                     },
                     "400": {
@@ -1626,6 +1667,9 @@
                             "$ref": "#/definitions/web.feedLogs.feedLogEntries"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -1680,6 +1724,9 @@
             },
             "put": {
                 "description": "Updates a feed with the specified configuration.",
+                "consumes": [
+                    "multipart/form-data"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -1704,19 +1751,19 @@
                     },
                     {
                         "enum": [
-                            1,
                             0,
                             1,
                             2,
-                            3
+                            3,
+                            1
                         ],
                         "type": "integer",
                         "x-enum-varnames": [
-                            "defaultSourcesFeedLogLevel",
                             "DebugFeedLogLevel",
                             "InfoFeedLogLevel",
                             "WarnFeedLogLevel",
-                            "ErrorFeedLogLevel"
+                            "ErrorFeedLogLevel",
+                            "defaultSourcesFeedLogLevel"
                         ],
                         "name": "log_level",
                         "in": "formData"
@@ -1959,6 +2006,9 @@
             },
             "put": {
                 "description": "Updates the source configuration.",
+                "consumes": [
+                    "multipart/form-data"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -2199,6 +2249,13 @@
                 ],
                 "summary": "Creates a feed.",
                 "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Source ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "minLength": 1,
                         "type": "string",
@@ -3015,18 +3072,18 @@
         "config.FeedLogLevel": {
             "type": "integer",
             "enum": [
-                1,
                 0,
                 1,
                 2,
-                3
+                3,
+                1
             ],
             "x-enum-varnames": [
-                "defaultSourcesFeedLogLevel",
                 "DebugFeedLogLevel",
                 "InfoFeedLogLevel",
                 "WarnFeedLogLevel",
-                "ErrorFeedLogLevel"
+                "ErrorFeedLogLevel",
+                "defaultSourcesFeedLogLevel"
             ]
         },
         "models.AdvisoryState": {
